reverted HTML to MD

--- a/pages/content/amp-dev/documentation/tutorial/400/401.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/401.md
@@ -1,19 +1,14 @@
 ---
-$title@: Track and measure
+$title@: title for page 401
 $titles:
   teaser: chapter-401
 teaser:
   icon: airplane
   label: Chapter 4
-$view: /views/overview/courses.j2
-$path: /documentation/tutorial/400/401.html
-$localization:
-  path: /{locale}/documentation/tutorial/400/401.html
 description: 'Learn chapter 4.'
 $order: 1
+leveled: false
 ---
-{% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
-{% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
 
 <section class="ap--section ap--intro">
   <h1>{{ _('You're currently not connected to the internet.') }}</h1>
