--- a/pages/content/amp-dev/documentation/tutorial/400/401.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/401.md
@@ -10,12 +10,6 @@ $order: 1
 leveled: false
 ---
 
-<section class="ap--section ap--intro">
-  <h1>{{ _('You're currently not connected to the internet.') }}</h1>
-  <p>
-  {{ _('Third-party JS likes to use synchronous JS loading. They also like to <code>document.write</code> more sync scripts. For example, if you have five ads on your page, and each of them cause three synchronous loads, each with a 1 second latency connection, you’re in 15 seconds of load time just for JS loading.') }}
-  </p>
-</section>
-
+Third-party JS likes to use synchronous JS loading. They also like to <code>document.write</code> more sync scripts. For example, if you have five ads on your page, and each of them cause three synchronous loads, each with a 1 second latency connection, you’re in 15 seconds of load time just for JS loading.
 
 
