modified chapter management

--- a/pages/content/amp-dev/documentation/tutorial/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial/100/101.md
@@ -1,7 +1,7 @@
 ---
-$title@: title for page 101
+$title@: page 101
 $titles:
-  teaser: chapter-1
+  teaser: chapter-101
 teaser:
   icon: airplane
   label: Chapter 1
