--- a/pages/content/amp-dev/documentation/tutorial/400/410/411.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/410/411.md
@@ -1,7 +1,9 @@
 ---
-$title@: title for page 411
+$title@: page 411
 $order: 1
 leveled: false
 ---
+
+# Another title for 411
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
