--- a/pages/content/amp-dev/documentation/tutorial/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/410/412.md
@@ -1,7 +1,9 @@
 ---
-$title@: title for page 412
+$title@: page 412
 $order: 2
 leveled: false
 ---
+
+# Another title for 412
 
 We are committed to improving speed across the board. If our site takes a long time to load, it doesn’t matter how great our journalism is, some people will leave the page before they see what’s there.
