--- a/pages/content/amp-dev/documentation/tutorial/400/401.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/401.md
@@ -1,9 +1,9 @@
 ---
 $title@: page 401
 $titles:
-  teaser: chapter-401
+  teaser: page 401
 teaser:
-  icon: airplane
+  icon: rocket
   label: Chapter 4
 description: 'Learn chapter 4.'
 $order: 1
