--- a/pages/content/amp-dev/documentation/tutorial/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial/400/410/412.md
@@ -4,6 +4,6 @@ $order: 2
 leveled: false
 ---
 
-# Another title for 412
+## level-2 title for 412
 
 We are committed to improving speed across the board. If our site takes a long time to load, it doesn’t matter how great our journalism is, some people will leave the page before they see what’s there.
