added test content to 102

--- a/pages/content/amp-dev/documentation/tutorial/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial/100/103.md
@@ -1,12 +1,6 @@
 ---
-$title@: Abstract 101
-$titles:
-  teaser: Page 101
-teaser:
-  icon: airplane
-  label: Chapter 1
-description: 'Learn chapter 1.'
-$order: 1
+$title@: page 103
+$order: 3
 leveled: false
 ---
 
