--- a/pages/content/amp-dev/documentation/tutorial/100/102.md
+++ b/pages/content/amp-dev/documentation/tutorial/100/102.md
@@ -22,10 +22,10 @@ leveled: false
 
 I need to highlight these <mark>very important words</mark>.
 
-I need to highlight these ``mark`` very important words</mark>.
+I need to highlight these ``very important words``.
 
 <pre>
-I need to highlight these ``mark`` very important words</mark>.
+I need to highlight these very important words.
 </pre>
 
 
@@ -33,7 +33,7 @@ I need to highlight these ``mark`` very important words</mark>.
 
 <table>
   <tr>
-   <td colspan="2">Text spanning three columns
+   <td colspan="3">Text spanning three columns
    </td>
   </tr>
   <tr>
