updated conditional format-toggle to chat proposal

--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
@@ -5,3 +5,9 @@ leveled: false
 ---
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, caption='Now is the time for all good men to come to the aid of their country') }}
+
+---
+
+{{ image('/static/img/tutorial-p/chapter-04/13-254x314.png', 254, 314, caption='Now is the time for all good men to come to the aid of their country') }}
