--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/411.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/411.md
@@ -1,9 +1,10 @@
 ---
 $title@: page 411
 $order: 1
+toc: false
 leveled: false
 ---
 
-## level-2 title for 411
+## level-2 title for page 411
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
