testing accordion for MD

--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
@@ -1,13 +1,19 @@
 ---
 $title@: title for page 422
 $order: 2
+toc: true
 leveled: false
 ---
 
+## level 2
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
 
-{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, caption='Now is the time for all good men to come to the aid of their country') }}
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='fixed', caption='Now is the time for all good men to come to the aid of their country') }}
 
-<br>
+### level 3
 
-{{ image('/static/img/tutorial-p/chapter-04/13-254x314.png', 254, 314, caption='Now is the time for all good men to come to the aid of their country') }}
+{{ image('/static/img/tutorial-p/chapter-04/13-254x314.png', 254, 314, align='center third', margin='10', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### level 3
+
+{{ image('/static/img/docs/ads/amp-300x250.png', 300, 250, align='center third', alt='learn about AMP ad') }}
