--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
@@ -1,10 +1,17 @@
 ---
 $title@: page 412
 $order: 2
-toc: true
+toc: false
 leveled: false
+faq: !g.yaml /shared/data/faq.yaml
 ---
 
 ## level-2 title for 412
 
 We are committed to improving speed across the board. If our site takes a long time to load, it doesn’t matter how great our journalism is, some people will leave the page before they see what’s there.
+
+## AMP Overview
+
+{% with sections = doc.faq.overview %}
+{% include 'views/partials/accordion.j2' %}
+{% endwith %}
