--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -10,4 +10,22 @@ $order: 1
 leveled: false
 ---
 
+## level 2
+
 Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
+
+## testing comments
+
+{::comment}
+comment text 1
+comment text 2
+ignored by parser
+{:/comment}
+
+
+## horizontal rule
+
+***
+
+text here
+
