--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
@@ -6,11 +6,7 @@ leveled: false
 faq: !g.yaml /shared/data/faq.yaml
 ---
 
-## level-2 title for 412
-
-We are committed to improving speed across the board. If our site takes a long time to load, it doesn’t matter how great our journalism is, some people will leave the page before they see what’s there.
-
-## AMP Overview
+## AMP Overview from YAML
 
 {% with sections = doc.faq.overview %}
 {% include 'views/partials/accordion.j2' %}
