--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -8,6 +8,8 @@ teaser:
 description: 'Learn chapter 1.'
 $order: 1
 leveled: false
+components:
+  - iframe
 ---
 
 ## level 2
@@ -16,11 +18,7 @@ Convey facts and figures via bite-sized chunks of one or two sentences – ideal
 
 ## testing comments
 
-{::comment}
-comment text 1
-comment text 2
-ignored by parser
-{:/comment}
+[This is a comment that will be hidden.]: #
 
 
 ## horizontal rule
@@ -29,3 +27,12 @@ ignored by parser
 
 text here
 
+## iframe
+
+<amp-iframe width="400" height="225"
+    sandbox="allow-scripts allow-same-origin"
+    layout="responsive"
+    src="https://giphy.com/embed/OWabwoEn7ezug">
+  <amp-img placeholder layout="fill"
+      src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
+</amp-iframe>
