--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -16,9 +16,16 @@ components:
 
 Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
 
-## testing comments
+## testing comments 1
 
 [This is a comment that will be hidden.]: #
+
+## testing comments 1
+
+<!---
+your comment goes here
+and here
+--->
 
 
 ## horizontal rule
@@ -36,3 +43,14 @@ text here
   <amp-img placeholder layout="fill"
       src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
 </amp-iframe>
+
+
+## animation
+
+<figure class="centered-fig">
+  <amp-anim width="300" height="533" layout="fixed" alt="AMP Story Example" src="https://github.com/ampproject/amphtml/raw/main/extensions/amp-story/img/amp-story.gif">
+    <noscript>
+      <img alt="AMP Story Example" src="https://github.com/ampproject/amphtml/raw/main/extensions/amp-story/img/amp-story.gif" />
+    </noscript>
+  </amp-anim>
+</figure>
