--- a/pages/content/amp-dev/documentation/tutorial-p/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/103.md
@@ -4,4 +4,15 @@ $order: 3
 leveled: false
 ---
 
+<section class="ap--stage ap--container-fluid">
+[stage format="websites"]
+## What is AMP?
+# AMP is a web component framework for easily creating user first
+
+[Get Started](/content/amp-dev/documentation/guides-and-tutorials/index.md)
+[/stage]
+</section>
+
+### more text
+
 Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
