--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/421.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/421.md
@@ -7,3 +7,23 @@ leveled: false
 ## heading 2
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
+
+```html hl_lines="3 4 5"
+<amp-ad type="a9"
+    width="300" height="250"
+    data-aax_size="300x250"
+    data-aax_pubname="test123"
+    data-aax_src="302">
+</amp-ad>
+```
+
+```html hl_lines="6"
+<amp-ad type="a9"
+    width="300" height="250"
+    data-aax_size="300x250"
+    data-aax_pubname="test123"
+    data-aax_src="302">
+   <amp-img placeholder src="placeholder-image.jpg"></amp-img>
+</amp-ad>
+```
+
