--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
@@ -10,17 +10,19 @@ When in doubt, do what’s best for the end user experience, even if it means th
 
 ### layout=responsive (default)
 
-{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='fixed', caption='Now is the time for all good men to come to the aid of their country') }}
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='responsive', caption='Now is the time for all good men to come to the aid of their country') }}
 
-### layout='fixed'
+### layout=intrinsic
 
-{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='fixed', caption='Now is the time for all good men to come to the aid of their country') }}
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', caption='Now is the time for all good men to come to the aid of their country') }}
 
 ### align=right third
 
 {{ image('/static/img/tutorial-p/chapter-04/13-254x314.png', 254, 314, align='right third', margin='10', caption='Now is the time for all good men to come to the aid of their country') }}
 
-### align=center third
+### align=center third (fails)
 
 {{ image('/static/img/docs/ads/amp-300x250.png', 300, 250, align='center third', alt='Now is the time for all good men to come to the aid of their country') }}
 
+
+more text
