test new formats

--- a/pages/content/amp-dev/documentation/tutorial-p/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/103.md
@@ -1,15 +1,19 @@
 ---
-$title@: page 103
+$title@: page 103 (stage)
 $order: 3
 leveled: false
+toc: false
 ---
+
+## stage (fails)
 
 <section class="ap--stage ap--container-fluid">
 [stage format="websites"]
 ## What is AMP?
-# AMP is a web component framework for easily creating user first
+### AMP is a web component framework for easily creating content
 
 [Get Started](/content/amp-dev/documentation/guides-and-tutorials/index.md)
+
 [/stage]
 </section>
 
