--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
@@ -1,12 +1,12 @@
 ---
-$title@: title for page 422
+$title@: page 422 images
 $order: 2
 toc: true
 leveled: false
 ---
 
 ## level 2
-When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
+Set toc=true to force images into less space
 
 ### layout=responsive (default)
 
@@ -16,6 +16,30 @@ When in doubt, do what’s best for the end user experience, even if it means th
 
 {{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', caption='Now is the time for all good men to come to the aid of their country') }}
 
+### layout=intrinsic, align=center
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='center', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### layout=intrinsic, align=center half
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='center half', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### layout=intrinsic, align=center third
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='center third', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### layout=intrinsic, align=right third
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='right third', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### layout=intrinsic, align=center seventyfive
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='center seventyfive', caption='Now is the time for all good men to come to the aid of their country') }}
+
+### layout=intrinsic, align=center ninety
+
+{{ image('/static/img/tutorial-p/chapter-04/01-562x541.png', 562, 541, layout='intrinsic', align='center ninety', caption='Now is the time for all good men to come to the aid of their country') }}
+
 ### align=right third
 
 {{ image('/static/img/tutorial-p/chapter-04/13-254x314.png', 254, 314, align='right third', margin='10', caption='Now is the time for all good men to come to the aid of their country') }}
@@ -24,5 +48,7 @@ When in doubt, do what’s best for the end user experience, even if it means th
 
 {{ image('/static/img/docs/ads/amp-300x250.png', 300, 250, align='center third', alt='Now is the time for all good men to come to the aid of their country') }}
 
+
+## more
 
 more text
