--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -14,13 +14,13 @@ components:
 
 ## level 2
 
-Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
+Added components:  - iframe to frontmatter.
 
-## testing comments 1
+## testing comments brackets (success)
 
 [This is a comment that will be hidden.]: #
 
-## testing comments 1
+## testing comments triple dash (success)
 
 <!---
 your comment goes here
@@ -32,9 +32,7 @@ and here
 
 ***
 
-text here
-
-## iframe
+## amp-iframe
 
 <amp-iframe width="400" height="225"
     sandbox="allow-scripts allow-same-origin"
@@ -45,7 +43,7 @@ text here
 </amp-iframe>
 
 
-## animation
+## amp-anim
 
 <figure class="centered-fig">
   <amp-anim width="300" height="533" layout="fixed" alt="AMP Story Example" src="https://github.com/ampproject/amphtml/raw/main/extensions/amp-story/img/amp-story.gif">
