--- a/pages/content/amp-dev/documentation/tutorial-p/100/104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/104.md
@@ -10,10 +10,9 @@ benefits: !g.yaml /shared/data/benefits.yaml
 
   {% for benefit in doc.benefits.stories.developer %}
 
-      <div>
-        <span> {{ (benefit.headline) }} </span>
-        <span> {{ (benefit.text) }} </span>
-      </div>
+     {{ (benefit.headline) }}
+
+     {{ (benefit.text) }} 
 
   {% endfor %}
 
