--- a/pages/content/amp-dev/documentation/tutorial-p/100/104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/104.md
@@ -8,11 +8,10 @@ benefits: !g.yaml /shared/data/benefits.yaml
 
 ## YAML test
 
-  {% for benefit in doc.benefits.stories.developer %}
-
-     {{ (benefit.headline) }}
-
-     {{ (benefit.text) }} 
-
-  {% endfor %}
+{% for benefit in doc.benefits.stories.developer %}
+  <div class="benefit">
+    <h3 class="benefit-headline">{{ benefit.headline | trim }}</h3>
+    <p class="benefit-text">{{ benefit.text | trim }}</p>
+  </div>
+{% endfor %}
 
