--- a/pages/content/amp-dev/documentation/tutorial-p/100/104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/104.md
@@ -9,9 +9,9 @@ benefits: !g.yaml /shared/data/benefits.yaml
 ## YAML test
 
 {% for benefit in doc.benefits.stories.developer %}
-  <div class="benefit">
-    <h3 class="benefit-headline">{{ benefit.headline | trim }}</h3>
-    <p class="benefit-text">{{ benefit.text | trim }}</p>
+  <div class="">
+    <h3 class="">{{ benefit.headline | trim }}</h3>
+    <p class="">{{ benefit.text | trim }}</p>
   </div>
 {% endfor %}
 
