--- a/pages/content/amp-dev/documentation/tutorial-p/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/103.md
@@ -1,9 +1,38 @@
 ---
 $title@: page 103
 $order: 3
-leveled: false
+leveled: true
 toc: false
+benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## Open for business
+## testing leveled and different YAML
+
+showing beginner and advanced
+
+
+[filter level="beginner"]
+
+### YAML test 1
+
+{% for benefit in doc.benefits.stories.developer %}
+  <div class="">
+    <h3 class="">{{ benefit.headline | trim }}</h3>
+    <p class="">{{ benefit.text | trim }}</p>
+  </div>
+{% endfor %}
+
+[/filter]
+
+[filter level="beginner"]
+
+### YAML test 2
+
+{% for benefit in doc.benefits.stories.developer %}
+  <div class="">
+    <h3 class="">{{ benefit.headline | trim }}</h3>
+  </div>
+{% endfor %}
+
+[/filter]
 
