--- a/pages/content/amp-dev/documentation/tutorial-p/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/103.md
@@ -10,29 +10,20 @@ benefits: !g.yaml /shared/data/benefits.yaml
 
 showing beginner and advanced
 
+note: Jinja may fail inside filter (test removing extra rows)
 
 [filter level="beginner"]
-
 ### YAML test 1
 
-{% for benefit in doc.benefits.stories.developer %}
-  <div class="">
-    <h3 class="">{{ benefit.headline | trim }}</h3>
-    <p class="">{{ benefit.text | trim }}</p>
-  </div>
-{% endfor %}
+Jelly jujubes marshmallow donut.
 
+Wafer cheesecake lollipop fruitcake danish powder.
+
+Pudding croissant biscuit icing.
 [/filter]
-
 [filter level="beginner"]
-
 ### YAML test 2
 
-{% for benefit in doc.benefits.stories.developer %}
-  <div class="">
-    <h3 class="">{{ benefit.headline | trim }}</h3>
-  </div>
-{% endfor %}
-
+The alas far owing dazedly freely reservedly before euphemistic treacherously to aristocratically expediently naively wishfully cuckoo tacitly hawk that pushed and crud amid tiger llama persistently far a well against ouch flirted notably repusively much and the goldfinch and until near goodness dragonfly much. Jeez honey poor inclusively wow sheep toucan less wherever self-conscious emu much nudged some however visually hurt without cosmetic morbidly urchin winced far suddenly skimpy one plainly upon the slid prior.
 [/filter]
 
