--- a/pages/content/amp-dev/documentation/tutorial-p/100/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/103.md
@@ -2,8 +2,7 @@
 $title@: page 103
 $order: 3
 leveled: true
-toc: false
-benefits: !g.yaml /shared/data/benefits.yaml
+toc: true
 ---
 
 ## testing leveled and different YAML
@@ -21,7 +20,7 @@ Wafer cheesecake lollipop fruitcake danish powder.
 
 Pudding croissant biscuit icing.
 [/filter]
-[filter level="beginner"]
+[filter level="advanced"]
 ### YAML test 2
 
 The alas far owing dazedly freely reservedly before euphemistic treacherously to aristocratically expediently naively wishfully cuckoo tacitly hawk that pushed and crud amid tiger llama persistently far a well against ouch flirted notably repusively much and the goldfinch and until near goodness dragonfly much. Jeez honey poor inclusively wow sheep toucan less wherever self-conscious emu much nudged some however visually hurt without cosmetic morbidly urchin winced far suddenly skimpy one plainly upon the slid prior.
