testing amp-display-date

--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/422.md
@@ -1,12 +1,12 @@
 ---
-$title@: page 422 images
+$title@: page 422
 $order: 2
-toc: true
+toc: false
 leveled: false
 ---
 
 ## level 2
-Set toc=true to force images into less space
+May nee to set toc=true to force images into less space
 
 ### layout=responsive (default)
 
