--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -16,10 +16,6 @@ components:
 
 Added components:  - iframe to frontmatter.
 
-## testing comments brackets (success)
-
-[This is a comment that will be hidden.]: #
-
 ## testing comments triple dash (success)
 
 <!---
@@ -33,7 +29,23 @@ and here
 ***
 
 ## amp-iframe
+<amp-iframe
+  width="900"
+	height="600"
+	layout="responsive"
+	scrolling="yes"
+	sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-popups-to-escape-sandbox allow-presentation allow-top-navigation"
+	allow="fullscreen"
+	frameborder="0"
+	src="https://ci-cd.readthedocs.io/en/latest/"
+	title="sphinx"
+>
+<div placeholder="">
+<div class="ap-o-sampler-iframe-source"></div>
+</div>
+</amp-iframe>
 
+<!--
 <amp-iframe width="400" height="225"
     sandbox="allow-scripts allow-same-origin"
     layout="responsive"
@@ -41,7 +53,7 @@ and here
   <amp-img placeholder layout="fill"
       src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
 </amp-iframe>
-
+-->
 
 ## amp-anim
 
