--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -29,20 +29,13 @@ and here
 ***
 
 ## amp-iframe
-<amp-iframe
-  width="900"
-	height="600"
-	layout="responsive"
-	scrolling="yes"
-	sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-popups-to-escape-sandbox allow-presentation allow-top-navigation"
-	allow="fullscreen"
-	frameborder="0"
-	src="https://ci-cd.readthedocs.io/en/latest/"
-	title="sphinx"
->
-<div placeholder="">
-<div class="ap-o-sampler-iframe-source"></div>
-</div>
+
+<amp-iframe width="900" height="600"
+    sandbox="allow-scripts allow-same-origin"
+    layout="responsive"
+    src="https://ci-cd.readthedocs.io/en/latest/">
+  <amp-img placeholder layout="fill"
+    src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
 </amp-iframe>
 
 <!---
