--- a/pages/content/amp-dev/documentation/tutorial-p/100/104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/104.md
@@ -5,11 +5,12 @@ leveled: false
 toc: false
 ---
 
-{% do doc.amp_dependencies.add('amp-date-display', '0.1') %}
-{% do doc.amp_dependencies.add('amp-mustache', '0.2') %}
-{% do doc.amp_dependencies.add('amp-bind', '0.1') %}
+## Display date fails
 
-## Display date
+{{ doc.amp_dependencies.emit() }}
+{% do doc.amp_dependencies.add('amp-bind', '0.1') %}
+{% do doc.amp_dependencies.add('amp-date-display', '0.1') %}
+{% do doc.amp_dependencies.add('amp-mustache', '0.2', 'template') %}
 
 <div>
 <amp-date-display datetime="now" locale="iso" layout="fixed" width="17rem" height="2.6rem">
