modified link amp-component

--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -24,7 +24,7 @@ and here
 --->
 
 
-## horizontal rule
+#### horizontal rule
 
 ***
 
@@ -35,7 +35,7 @@ and here
     layout="responsive"
     src="https://ci-cd.readthedocs.io/en/latest/">
   <amp-img placeholder layout="fill"
-    src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
+    src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
 </amp-iframe>
 
 <!---
