--- a/pages/content/amp-dev/documentation/tutorial-p/100/104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/104.md
@@ -12,11 +12,5 @@ toc: false
 {% do doc.amp_dependencies.add('amp-date-display', '0.1') %}
 {% do doc.amp_dependencies.add('amp-mustache', '0.2', 'template') %}
 
-<div>
-<amp-date-display datetime="now" locale="iso" layout="fixed" width="17rem" height="2.6rem">
-<template type="amp-mustache">
-<div class="">iso&#x3A; {{year}}&#x2013;{{monthTwoDigit}}&#x2013;{{dayTwoDigit}}</div>
-</template>
-</amp-date-display>
-</div>
+<div><amp-date-display datetime="now" locale="iso" layout="fixed" width="17rem" height="2.6rem"><template type="amp-mustache"><div class="">iso&#x3A; {{year}}&#x2013;{{monthTwoDigit}}&#x2013;{{dayTwoDigit}}</div></template></amp-date-display></div>
 
