--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -5,9 +5,8 @@ $titles:
 teaser:
   icon: airplane
   label: Chapter 1
-description: 'Learn chapter 1.'
+description@: 'Learn chapter 1.'
 $order: 1
-leveled: false
 components:
   - iframe
 ---
@@ -38,15 +37,6 @@ and here
     src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
 </amp-iframe>
 
-<!---
-<amp-iframe width="400" height="225"
-    sandbox="allow-scripts allow-same-origin"
-    layout="responsive"
-    src="https://giphy.com/embed/OWabwoEn7ezug">
-  <amp-img placeholder layout="fill"
-      src="https://ampproject-b5f4c.firebaseapp.com/examples/images/kittens-biting.jpg"></amp-img>
-</amp-iframe>
---->
 
 ***
 
