--- a/pages/content/amp-dev/documentation/tutorial-p/400/420/421.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/420/421.md
@@ -1,10 +1,9 @@
 ---
 $title@: page 421
 $order: 1
-leveled: false
 ---
 
-## using back-tick
+## Code using back-tick
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
 
