--- a/pages/content/amp-dev/documentation/tutorial-p/100/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/101.md
@@ -1,17 +1,20 @@
 ---
-$title@: Abstract 101
+$title@: Abstract
 $titles:
-  teaser: Page 101
+  teaser: Abstract (page 101)
 teaser:
   icon: airplane
   label: Chapter 1
 description@: 'Learn chapter 1.'
 $order: 1
+toc: true
 components:
   - iframe
 ---
 
-## level 2
+## toc: true
+
+## Components
 
 Added components:  - iframe to frontmatter.
 
