--- a/pages/content/amp-dev/documentation/tutorial-p/100/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/100/102.md
@@ -1,7 +1,10 @@
 ---
 $title@: page 102
+toc: true
 $order: 2
 ---
+
+## toc: true
 
 #### *How should URIs be assigned to a group of resources that form a natural hierarchy?*
 
@@ -10,22 +13,9 @@ $order: 2
 
 > ⚠️ **Warning:** Immerse readers in visual and tappable stories they can share anywhere on the open web.
 
-
 > 📝 **Note:** Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
 
-
-> 💡 **Tip:** Remember to appreciate the little things in life.
-
-
-## blockquote and emoji 2
-
->> ⚠️ **Warning:** Immerse readers in visual and tappable stories they can share anywhere on the open web.
-
-
->> 📝 **Note:** Convey facts and figures via bite-sized chunks of one or two sentences – ideal for mobile devices. Choose from different font colors for basic readability. Or add visual elements like subtle black transparent gradient overlays to ensure readability even on random background imagery, for example user generated content. On top of this, you can use short audio files on every page to provide spoken information or background music.
-
-
->> 💡 <span style="font-family: Fira Mono, monospace; background-color: #dadada; font-weight: 500; font-size: 1.2em; line-height: 2.2em;">**Tip:** Remember to appreciate the little things in life.</span>
+> 💡 <span style="font-family: Fira Mono, monospace; background-color: #dadada; font-weight: 500; font-size: 1.2em; line-height: 2.2em;">**Tip:** Remember to appreciate the little things in life.</span>
 
 
 ## tables
