--- a/pages/content/amp-dev/documentation/tutorial-p/400/401.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/401.md
@@ -1,13 +1,12 @@
 ---
-$title@: page 401
+$title@: Title
 $titles:
-  teaser: page 401
+  teaser: Title (page 401)
 teaser:
   icon: rocket
   label: Chapter 4
 description: 'Learn chapter 4.'
 $order: 1
-leveled: false
 ---
 
 Third-party JS likes to use synchronous JS loading. They also like to <code>document.write</code> more sync scripts. For example, if you have five ads on your page, and each of them cause three synchronous loads, each with a 1 second latency connection, you’re in 15 seconds of load time just for JS loading.
