--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
@@ -1,8 +1,10 @@
 ---
-$title@: page 412
+$title@: page 4-1-2
 $order: 2
 faq: !g.yaml /shared/data/faq.yaml
 ---
+
+## toc: false
 
 ## AMP Overview from YAML
 
