--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/411.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/411.md
@@ -1,8 +1,9 @@
 ---
 $title@: page 4-1-1
 $order: 1
+toc: false
 ---
 
-## page 4-1 toc-false
+## page 4-1 toc-false (but displays anyway)
 
 When in doubt, do what’s best for the end user experience, even if it means that it’s harder for the page creator to build or for the library developer to implement.
