--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
@@ -1,10 +1,11 @@
 ---
 $title@: page 4-1-2
 $order: 2
+toc: false
 faq: !g.yaml /shared/data/faq.yaml
 ---
 
-## toc: false
+## toc: false (but displays anyway)
 
 ## AMP Overview from YAML
 
