--- a/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/400/410/412.md
@@ -5,7 +5,7 @@ toc: false
 faq: !g.yaml /shared/data/faq.yaml
 ---
 
-## toc: false (but displays anyway)
+## toc: false
 
 ## AMP Overview from YAML
 
