--- a/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
@@ -1,11 +1,11 @@
 ---
 $title@: Requirements and the Protégé User Interface
 $titles:
-  teaser: Requirements and the Protégé User Interface
+  teaser: Protégé Requirements
 teaser:
   icon: airplane
   label: Requirements
-description@: 'Requirements and the Protégé User Interface'
+description@: 'Requirements and the Protégé User Interface from description'
 $order: 1
 ---
 
