better landing page

--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -1,11 +1,11 @@
 ---
 $title@: Introduction
 $titles:
-  teaser: Introduction
+  teaser: Chapter 1
 teaser:
   icon: airplane
   label: Introduction
-description@: 'Read the introduction'
+description@: 'Read the introduction from description'
 $order: 1
 ---
 
