--- a/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
@@ -1,7 +1,7 @@
 ---
 $title@: Requirements and the Protégé User Interface
 $titles:
-  teaser: Protégé Requirements
+  teaser: Chapter 2
 teaser:
   icon: airplane
   label: Requirements
