--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -5,7 +5,7 @@ $titles:
 teaser:
   icon: airplane
   label: Introduction
-description@: 'Read the introduction from description'
+description@: 'Read the introduction'
 $order: 1
 ---
 
