--- a/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/102/a101.md
@@ -1,11 +1,11 @@
 ---
-$title@: Requirements and the Protégé User Interface
+$title@: Requirements and Protégé
 $titles:
   teaser: Chapter 2
 teaser:
   icon: airplane
   label: Requirements
-description@: 'Requirements and the Protégé User Interface from description'
+description@: 'Requirements and Protégé User Interface'
 $order: 1
 ---
 
