--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -1,11 +1,11 @@
 ---
-$title@: What are OWL Ontologies?
+$title@: OWL Ontologies
 $titles:
   teaser: Chapter 3
 teaser:
   icon: airplane
   label: OWL Ontologies
-description@: 'What are OWL Ontologies? from description'
+description@: 'What are OWL Ontologies?'
 $order: 1
 ---
 
