changed relative address

--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -10,19 +10,16 @@ $order: 2
 
 ### links
 
-Here is my [Homepage][MichaelCurrin home]
+Here is my [Homepage][MichaelCurrin home] example 1
 
-I'm using another link to my site [here][MichaelCurrin home] in case you missed it.
+Here is my [here][MichaelCurrin home] example 2
 
 Here is my [Homepage][1] with a numbered reference.
 
-Here is my [Homepage][].
-
-Here is my [Homepage].
 
 ### embed
 
-<embed src="../../../../tests/examples/default_settings.md" />
+<embed src="../../../tests/examples/default_settings.md" />
 
 
 ### blockquote and emoji 1
@@ -88,7 +85,7 @@ your comment goes here
 and here
 --->
 
-### reference links
+### reference links (not visible!)
 
 [MichaelCurrin home]: https://michaelcurrin.github.io/
 
