testing tutorial-p.yaml for a101.md

--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -7,6 +7,18 @@ teaser:
   label: Introduction
 description@: 'Read the introduction'
 $order: 1
+benefits: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
 This introduces Protégé 5 for creating OWL ontologies as well as various plugins.
+
+## YAML test
+
+{% for benefit in doc.benefits %}
+{{ benefit.heading_1 | trim }}&nbsp;{{ benefit.heading_2 | trim }}
+
+{{ benefit.text_1 | trim }}
+
+{{ benefit.text_2 | trim }}
+
+{% endfor %}
