--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -19,7 +19,7 @@ Here is my [Homepage][1] with a numbered reference.
 
 ### embed
 
-<embed src="../../../tests/examples/default_settings.md" />
+<embed width="900" height="300" src="{{ g.doc('/content/tests/examples/default_settings.md', locale=doc.locale) }}" />
 
 
 ### blockquote and emoji 1
