--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -14,11 +14,11 @@ This introduces Protégé 5 for creating OWL ontologies as well as various plugi
 
 ## YAML test
 
-{% for benefit in doc.benefits %}
-{{ benefit.heading_1 | trim }}&nbsp;{{ benefit.heading_2 | trim }}
+{% for item in doc.benefits.item %}
+{{ item.heading_1 | trim }}&nbsp;{{ item.heading_2 | trim }}
 
-{{ benefit.text_1 | trim }}
+{{ item.text_1 | trim }}
 
-{{ benefit.text_2 | trim }}
+{{ item.text_2 | trim }}
 
 {% endfor %}
