--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -17,7 +17,7 @@ Here is my [here][MichaelCurrin home] example 2
 Here is my [Homepage][1] with a numbered reference.
 
 
-### code snippet
+### code snippet 1
 
 <div class="ap-m-biggy-aside">
   {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
@@ -26,6 +26,9 @@ Here is my [Homepage][1] with a numbered reference.
   {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
 </div>
 
+### code snippet 2
+
+<label>{{ g.doc('/content/pixi/no-field-data.md', locale=doc.locale).html|render|safe }}</label>
 
 ### blockquote and emoji 1
 
