--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -12,23 +12,13 @@ benefits: !g.yaml /shared/data/tutorial-p.yaml
 
 This introduces Protégé 5 for creating OWL ontologies as well as various plugins.
 
-## YAML test 1
+## YAML test
 
 {% for item in doc.benefits.item %}
-{{ item.heading_1 | trim }} {{ item.heading_2 | trim }}
+{{ item.heading_1 | trim }}&nbsp;{{ item.heading_2 | trim }}
 
 {{ item.text_1 | trim }}
 
 {{ item.text_2 | trim }}
+
 {% endfor %}
-
-## YAML test 2
-
-{% for item in doc.benefits.item %}
-## {{ item.heading_2 | trim }}
-
-  * {{ item.text_1 | trim }}
-
-  * {{ item.text_2 | trim }}
-{% endfor %}
-
