--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -16,19 +16,11 @@ Here is my [here][MichaelCurrin home] example 2
 
 Here is my [Homepage][1] with a numbered reference.
 
-<!---
-### code snippet 1
 
-<div class="ap-m-biggy-aside">
-  {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
-  {% set code_snippet = g.doc('/shared/data/hello-world.html').content %}
-  {% set markdown = doc.pod.markdown %}
-  {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
-</div>
-### code snippet 2
+### include
 
-<label>{{ g.doc('/content/pixi/no-field-data.md', locale=doc.locale).html|render|safe }}</label>
---->
+[!INCLUDE [my-markdown-block](../103/a101.md)]
+
 
 ### blockquote and emoji 1
 
