--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -19,7 +19,7 @@ Here is my [Homepage][1] with a numbered reference.
 
 ### include
 
-[!INCLUDE [my-markdown-block](../103/a101.md)]
+<embed src="../999/_test.md" />
 
 
 ### blockquote and emoji 1
