--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -7,18 +7,18 @@ teaser:
   label: Introduction
 description@: 'Read the introduction'
 $order: 1
-benefits: !g.yaml /shared/data/tutorial-p.yaml
+tutorial: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
 This introduces Protégé 5 for creating OWL ontologies as well as various plugins.
 
 ## YAML test
 
-{% for item in doc.benefits.item %}
-{{ item.heading_1 | trim }}&nbsp;{{ item.heading_2 | trim }}
+{% for v in doc.tutorial.item %}
+{{ v.heading_1 | trim }} {{ v.heading_2 | trim }}
 
-{{ item.text_1 | trim }}
+{{ v.text_1 | trim }}
 
-{{ item.text_2 | trim }}
+{{ v.text_2 | trim }}
 
 {% endfor %}
