--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -17,10 +17,9 @@ Here is my [here][MichaelCurrin home] example 2
 Here is my [Homepage][1] with a numbered reference.
 
 
-### include
+### label g.doc
 
-<embed src="../999/_test.md" />
-
+<label>{{ g.doc('/content/pixi/no-field-data.md', locale=doc.locale).html|render|safe }}</label>
 
 ### blockquote and emoji 1
 
