--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -17,9 +17,14 @@ Here is my [here][MichaelCurrin home] example 2
 Here is my [Homepage][1] with a numbered reference.
 
 
-### label g.doc
+### g.doc
 
-<label>{{ g.doc('/content/pixi/no-field-data.md', locale=doc.locale).html|render|safe }}</label>
+<div class="ap-m-biggy-aside">
+  {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
+  {% set code_snippet = g.doc('/shared/data/hello-world.html').content %}
+  {% set markdown = doc.pod.markdown %}
+  {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
+</div>
 
 ### blockquote and emoji 1
 
