--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -17,7 +17,7 @@ Here is my [here][MichaelCurrin home] example 2
 Here is my [Homepage][1] with a numbered reference.
 
 
-### g.doc
+### g.doc 1
 
 <div class="ap-m-biggy-aside">
   {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
@@ -25,6 +25,13 @@ Here is my [Homepage][1] with a numbered reference.
   {% set markdown = doc.pod.markdown %}
   {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
 </div>
+
+### g.doc 2
+
+{% set code_snippet = g.doc('/shared/data/hello-world.html').content %}
+{% set markdown = doc.pod.markdown %}
+{{ markdown.convert('```html\n' + code_snippet + '\n```') | safe }}
+
 
 ### blockquote and emoji 1
 
