--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -16,6 +16,12 @@ Here is my [here][MichaelCurrin home] example 2
 
 Here is my [Homepage][1] with a numbered reference.
 
+### footnotes
+
+My first citation [^1]
+
+My second citation [^1]
+
 
 ### g.doc 1
 
@@ -105,3 +111,18 @@ and here
 [Homepage]: https://michaelcurrin.github.io/
 
 
+## Notes
+
+[^1]: The footnote itself is the same thing as the footnote
+number reference in the text, but with a colon followed by
+the footnote text
+Footnotes can also include Markdown formatting, including lists and even multiple paragraphs. For these, indent the content inwards two levels and put a line space in between the paragraphs just as you would elsewhere.
+
+[^2]:
+    Footnotes with multiple paragraphs
+
+    Are indented in twice, and have line breaks between.
+
+    - Markdown lists
+    - work like this in footnotes
+    - as well
