--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -20,10 +20,10 @@ Here is my [Homepage][1] with a numbered reference.
 
 My first citation [^1]
 
-My second citation [^1]
+My second citation [^2]
 
 
-### g.doc 1
+### g.doc #1
 
 <div class="ap-m-biggy-aside">
   {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
@@ -32,7 +32,7 @@ My second citation [^1]
   {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
 </div>
 
-### g.doc 2
+### g.doc #2
 
 {% set code_snippet = g.doc('/shared/data/hello-world.html').content %}
 {% set markdown = doc.pod.markdown %}
