--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -34,9 +34,8 @@ My second citation [^2]
 
 ### g.doc #2
 
-{% set code_snippet = g.doc('/shared/data/hello-world.html').content %}
-{% set markdown = doc.pod.markdown %}
-{{ markdown.convert('```html\n' + code_snippet + '\n```') | safe }}
+{% set markdown_content = g.doc('/content/amp-dev/documentation/tutorial-p/102/a101.md').content %}
+{{ markdown_content | safe }}
 
 
 ### blockquote and emoji 1
