--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -18,9 +18,7 @@ Here is my [Homepage][1] with a numbered reference.
 
 ### footnotes
 
-My first citation [^1]
-
-My second citation [^2]
+Here is a simple footnote[^2]. With some additional text after it.
 
 
 ### g.doc #1
