--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -29,3 +29,22 @@ This introduces Protégé 5 for creating OWL ontologies as well as various plugi
 {{ v.text_1 | trim }}
 {{ v.text_2 | trim }}
 {% endfor %}
+
+***
+
+{% for v in doc.tutorial.item %}
+{{ v.heading_3 | trim }}
+
+{{ v.text_1 | trim }}
+{{ v.text_2 | trim }}
+{% endfor %}
+
+
+***
+
+{% for v in doc.tutorial.item %}
+## {{ v.heading_2 | trim }}</span>
+
+{{ v.text_1 | trim }}
+{{ v.text_2 | trim }}
+{% endfor %}
