--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -42,9 +42,5 @@ This introduces Protégé 5 for creating OWL ontologies as well as various plugi
 
 ***
 
-{% for v in doc.tutorial.item %}
-## {{ v.heading_2 | trim }}</span>
+## {% for v in doc.tutorial.item %}{{ v.heading_2 | trim }}{% endfor %}
 
-{{ v.text_1 | trim }}
-{{ v.text_2 | trim }}
-{% endfor %}
