--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -36,6 +36,16 @@ Here is a simple footnote[^2]. With some additional text after it.
 {{ markdown_content | safe }}
 
 
+### g.doc #3
+
+<div class="ap-m-biggy-aside">
+  {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
+  {% set js_snippet = g.doc('/shared/data/json-ld.js').content %}
+  {% set markdown = doc.pod.markdown %}
+  {{ markdown.convert('```javascript\n' + js_snippet + '\n```')|safe }}
+</div>
+
+
 ### blockquote and emoji 1
 
 > ⚠️ **Warning:** Immerse readers in visual and tappable stories they can share anywhere on the open web.
