--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -40,9 +40,9 @@ Here is a simple footnote[^2]. With some additional text after it.
 
 <div class="ap-m-biggy-aside">
   {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
-  {% set js_snippet = g.doc('/shared/data/json-ld.js').content %}
+  {% set code_snippet = g.doc('/shared/data/json-ld.html').content %}
   {% set markdown = doc.pod.markdown %}
-  {{ markdown.convert('```javascript\n' + js_snippet + '\n```')|safe }}
+  {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
 </div>
 
 
