--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -12,7 +12,7 @@ tutorial: !g.yaml /shared/data/tutorial-p.yaml
 
 This introduces Protégé 5 for creating OWL ontologies as well as various plugins.
 
-## YAML test
+## YAML test 1
 
 {% for v in doc.tutorial.item %}
 
@@ -27,5 +27,18 @@ This introduces Protégé 5 for creating OWL ontologies as well as various plugi
 
 # 
 {% for v in doc.tutorial.item %} {{ v.heading_2 | trim }} {% endfor %}
+
+
+***
+
+## YAML test 2
+
+{% for v in doc.tutorial.item %}
+  <div class="">
+    <h3 class="">{{ v.heading_2 | trim }}</h3>
+    <p class="">{{ v.text_1 | trim }}</p>
+    <p class="">{{ v.text_2 | trim }}</p>
+  </div>
+{% endfor %}
 
 
