--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -27,8 +27,10 @@ Here is my [Homepage][1] with a numbered reference.
 
 ### g.doc #2
 
+<div class="ap-m-biggy-aside">
 {% set markdown_content = g.doc('/content/amp-dev/documentation/tutorial-p/999/file.md').content %}
 {{ markdown_content | safe }}
+</div>
 
 
 ### g.doc #3
