--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -10,28 +10,7 @@ $order: 1
 tutorial: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-This introduces Protégé 5 for creating OWL ontologies as well as various plugins.
-
-## YAML test 1
-
-{% for v in doc.tutorial.item %}
-
-{{ v.heading_1 | trim }} {{ v.heading_2 | trim }}
-
-{{ v.text_1 | trim }}
-{{ v.text_2 | trim }}
-
-{% endfor %}
-
-***
-
-# 
-{% for v in doc.tutorial.item %} {{ v.heading_2 | trim }} {% endfor %}
-
-
-***
-
-## YAML test 2
+## YAML test
 
 {% for v in doc.tutorial.item %}
   <div class="">
