--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -12,7 +12,7 @@ $order: 2
 
 Here is my [Homepage][MichaelCurrin home] example 1
 
-Here is my [here][MichaelCurrin home] example 2
+[Here][MichaelCurrin home] is my example 2
 
 Here is my [Homepage][1] with a numbered reference.
 
@@ -30,7 +30,6 @@ Here is my [Homepage][1] with a numbered reference.
 <div class="ap-m-biggy-aside">
 {% set markdown_content = g.doc('/content/amp-dev/documentation/tutorial-p/999/file.md').content %}
 {{ markdown_content | safe }}
-</div>
 
 
 ### g.doc #3
