--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -14,10 +14,17 @@ tutorial: !g.yaml /shared/data/tutorial-p.yaml
 
 {% for v in doc.tutorial.item %}
   <div class="">
-    <h3 class="">{{ v.heading_2 | trim }}</h3>
+    <h3 class="">{{ v.heading_2 | safe }}</h3>
     <p class="">{{ v.text_1 | trim }}</p>
     <p class="">{{ v.text_2 | trim }}</p>
   </div>
 {% endfor %}
 
+***
+
+{% for v in doc.tutorial.item %}
+{{ v.heading_2 | safe }} {{ v.heading_2 | safe }}
+{{ v.text_1 | trim }}
+{{ v.text_2 | trim }}
+{% endfor %}
 
