--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -13,7 +13,7 @@ tutorial: !g.yaml /shared/data/tutorial-p.yaml
 ## YAML test
 
 {% for v in doc.tutorial.item %}
-<p class=""><span>{{ v.heading_1 | safe }}</span> <span>{{ v.heading_2 | safe }}</span></p>
+<p class="">{{ v.heading_2 | safe }}</p>
 <p class="">{{ v.text_1 | trim }}</p>
 <p class="">{{ v.text_2 | trim }}</p>
 {% endfor %}
