--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -14,7 +14,7 @@ tutorial: !g.yaml /shared/data/tutorial-p.yaml
 
 {% for v in doc.tutorial.item %}
 <h3 class="">{{ v.heading_1 | safe }}</h3>
-<p class="">{{ v.heading_2 }}</p>
+<p class="">{{ v.heading_2 | safe }}</p>
 <p class="">{{ v.text_1 | trim }}</p>
 <p class="">{{ v.text_2 | trim }}</p>
 {% endfor %}
